<resources>
    <string name="app_name">PrappMobCorrectViews</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ADD NEW SAMPLE STRINGS -->
    <string name="save_sample_number">Insert value</string>
    <string name="save_sample_timestamp">Insert date</string>
    <string name="save_sample_button">Add new sample!</string>
    <string name="back_button">Back</string>

    <string name="new_sample_added_notification_title_template">New sample added: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_sample_added_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="buttonFilter">Filter</string>
    <string name="button_filter_popup">Filter Samples</string>
    <string name="text_date_from">Date from:</string>
    <string name="text_date_to">Date to:</string>
    <string name="text_select_workstation">Workstation:</string>
    <string name="text_select_sensor">Sensor</string>
    <string name="enter_lab_label">Enter Lab</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
